sync editorconfig to 120 line length